--- a/style.css
+++ b/style.css
@@ -53,8 +53,9 @@ body {
 
 .quote-author {
   margin-top: 15px;
-  font-size: 2rem;
-  font-weight: 400;
+  font-family: sans-serif;
+  font-size: 1.6rem;
+  font-weight: 200;
   font-style: italic;
 }
 
